--- a/my_rc.yml
+++ b/my_rc.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: rc_first_Javaapp
+  name: rc-first-Javaapp
   labels: 
     version:  v1
 spec:
@@ -14,7 +14,7 @@ spec:
         app:  javapplication
     spec:
       containers:
-        - name:  my-name
+        - name: Container123
           image:  maha4iac/mymahalogin
           ports:  
             - containerPort: 8080
