--- a/myrc_srvc.yml
+++ b/myrc_srvc.yml
@@ -10,7 +10,7 @@ spec:
   ports:
     - port: 8080
       protocol: TCP
-      nodeport: 30001
+      nodePort: 30001
   selector:
     app:  javapplication
 
