--- a/my_rc.yml
+++ b/my_rc.yml
@@ -2,16 +2,16 @@ apiVersion: v1
 kind: ReplicationController
 metadata:
   name: rc-first-javaapp
-  labels: 
-    version:  v1
+  labels: #optional
+    version:  v1 #optional
 spec:
-  replicas: 5
+  replicas: 3
   selector:
-    app:  javapplication
+    app:  javapplication #Should be same with Pod name
   template:
     metadata: 
       labels: 
-        app:  javapplication
+        app:  javapplication  # pod name
     spec:
       containers:
         - name: java-container
