--- a/myrc_srvc.yml
+++ b/myrc_srvc.yml
@@ -3,8 +3,8 @@ kind: Service
 metadata:
   name: rc-service
   labels: 
-    app:  abcd
-    version:  v123
+    app:  abcd #optnal
+    version:  v123 #optnal
 spec: 
   type: NodePort
   ports:
@@ -12,5 +12,5 @@ spec:
       protocol: TCP
       nodePort: 30100
   selector:
-    app:  javapplication
+    app:  javapplication # Should be same with Pod name
 
